apps/oxlint/src/snapshots/fixtures__bulk_suppression_--prune-suppressions --suppression-file test-suppressions.json .@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: --prune-suppressions --suppression-file test-suppressions.json .
working directory: fixtures/bulk_suppression
----------
Pruned suppression file: test-suppressions.json
----------
CLI result: LintSucceeded
----------
