apps/oxlint/src/snapshots/fixtures__bulk_suppression_--prune-suppressions .@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: --prune-suppressions .
working directory: fixtures/bulk_suppression
----------
Pruned suppression file: oxlint-suppressions.json
----------
CLI result: LintSucceeded
----------
