apps/oxlint/src/snapshots/fixtures__bulk_suppression_--suppress-all --suppression-file custom-suppressions.json .@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: --suppress-all --suppression-file custom-suppressions.json .
working directory: fixtures/bulk_suppression
----------
Generated suppression file: custom-suppressions.json
----------
CLI result: LintSucceeded
----------
