apps/oxlint/src/snapshots/fixtures__bulk_suppression_--suppress-all .@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: --suppress-all .
working directory: fixtures/bulk_suppression
----------
Generated suppression file: oxlint-suppressions.json
----------
CLI result: LintSucceeded
----------
