apps/oxlint/src/snapshots/fixtures__bulk_suppression_--suppress-all test.js@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: --suppress-all test.js
working directory: fixtures/bulk_suppression
----------
Generated suppression file: oxlint-suppressions.json
----------
CLI result: LintSucceeded
----------
